Fix editor adding a vertical scrollbar to the entire page instead of just the editor container, adding unexpected behaviours when using keyboard input.

--- a/examples/Sandbox/scss/_editor.scss
+++ b/examples/Sandbox/scss/_editor.scss
@@ -4,6 +4,8 @@
 	overflow: hidden;
 
 	&-container {
+		overflow-y: scroll;
+
 		> :not(:last-child) {
 			margin-bottom: 1rem;
 		}
